tests/transpiler/x/java/map_assign.error
exit status 1
Main.java:16: error: cannot find symbol
scores.put("bob", 2);
      ^
  symbol:   method put(String,int)
  location: variable scores of type Data1
Main.java:17: error: cannot find symbol
        System.out.println(scores.get("bob"));
                                 ^
  symbol:   method get(String)
  location: variable scores of type Data1
2 errors
